# spoolman-bambu-filament-status

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
client/: .env.production  README.MD  index.html  package-lock.json  package.json
client/public/: manifest.json
client/public/locales/en/: common.json
client/src/: App.tsx  i18n.ts
client/src/components/: extraFields.tsx  layout.tsx  liveProvider.ts  otherModels.tsx
client/src/pages/help/: index.tsx
client/src/pages/home/: index.tsx
client/src/pages/printers/: index.tsx  list.tsx  model.tsx  show.tsx
client/src/utils/: queryFields.ts  settings.ts
spoolman_bambu/: docs.py  env.py  exceptions.py  main.py  state.py  task_scheduler.py  ws.py
spoolman_bambu/api/v1/: info.py  models.py  printer.py  router.py  spoolman.py
spoolman_bambu/bambu/: ams_processor.py  bambu.py
spoolman_bambu/spoolman/: spoolman.py
spoolman_bambu/state_tracker/: state.py
tests_unit/: test_env.py  test_task_scheduler.py
tests_unit/bambu/: test_ams_processor.py
